# srcops-notify-bot

./: .aicoe-ci.yaml  .pre-commit-config.yaml  OWNERS  Pipfile  README.md  pyproject.toml  srcops_notify_bot
aicoe/sesheta/: __init__.py  srcops_notify_bot.py
aicoe/sesheta/actions/: chat.py  common.py  pull_request.py
