[build-system]
requires = [ "setuptools >= 50.3.2", "wheel >= 0.36.2"]
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py39

[testenv]
deps =
    pytest
    pytest-asyncio
    thoth-common
commands =
    pytest
"""

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
